offset.lag.max: 允许source集群和target集群之间最大的消费者group出现的偏移

--- a/mine/acl/mirror-maker-2-with-superuser.yaml
+++ b/mine/acl/mirror-maker-2-with-superuser.yaml
@@ -187,6 +187,10 @@ spec:
         # 改为All会导致mm2 pod重启
         operations:
           - Describe
+          - Write
+          - Alter
+          - AlterConfigs
+          - DescribeConfigs
       - resource:
           type: topic
           name: cluster-a.checkpoints.internal
@@ -273,7 +277,9 @@ spec:
           refresh.topics.interval.seconds: 60
           sync.topic.acls.interval.seconds: 60
           sync.topic.configs.interval.seconds: 60
-          offset.lag.max: 100
+          # https://issues.apache.org/jira/browse/KAFKA-15985
+          # source和target集群之间consumer offset允许的最大偏移
+          offset.lag.max: 0
       checkpointConnector:
         tasksMax: 1
         config:
