--- a/mine/acl/topic.yaml
+++ b/mine/acl/topic.yaml
@@ -1,7 +1,7 @@
 apiVersion: kafka.strimzi.io/v1beta1
 kind: KafkaTopic
 metadata:
-  name: topic-0322
+  name: topic-0324-01
   labels:
     strimzi.io/cluster: cluster-a
 spec:
