--- a/mine/acl/user.yaml
+++ b/mine/acl/user.yaml
@@ -1,17 +1,3 @@
-apiVersion: kafka.strimzi.io/v1beta1
-kind: KafkaTopic
-metadata:
-  name: topic-0324
-  labels:
-    strimzi.io/cluster: cluster-a
-spec:
-  partitions: 1
-  replicas: 1
-  config:
-    retention.ms: 7200000
-    segment.bytes: 1073741824
-    max.message.bytes: 1048589
----
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaUser
 metadata:
@@ -30,3 +16,10 @@ spec:
           patternType: literal
         operations:
           - Read
+      - resource:
+          type: topic
+          name: "topic-0324-01"
+          patternType: literal
+        operations:
+          - Read
+          - Write
